<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBDEFB">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_employee_details"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/et_dialog_employee_name"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/user"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10sp"
        android:paddingRight="20sp"
        android:gravity="center"
        android:hint="@string/employee_full_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_dialog_employee_designation"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/designation"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10sp"
        android:paddingRight="20sp"
        android:gravity="center"
        android:hint="@string/employee_designation"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_dialog_work_details"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/work_details"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10sp"
        android:paddingRight="20sp"
        android:gravity="center"
        android:hint="@string/employee_work_details"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_dialog_salary"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/salary"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10sp"
        android:paddingRight="20sp"
        android:gravity="center"
        android:hint="@string/employee_salary"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_update"
        android:background="@drawable/button_round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="10dp"
        android:text="@string/update"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

</LinearLayout>