<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBDEFB"
    tools:context=".EmployeeCRUD.AddNewEmployee"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_details"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/new_employee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_employee_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/employee_id"
            android:gravity="center"
            android:hint="@string/employee_id"
            android:inputType="textPersonName"
            android:paddingLeft="10sp"
            android:paddingRight="20sp" />

        <EditText
            android:id="@+id/et_employee_joining_date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/joining_date"
            android:gravity="center"
            android:hint="@string/employee_joining_date"
            android:inputType="date"
            android:paddingLeft="10sp"
            android:paddingRight="20sp"
            android:text="06/24/2020" />

        <EditText
            android:id="@+id/et_employee_fullname"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/user"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="10sp"
            android:paddingRight="20sp"
            android:gravity="center"
            android:hint="@string/employee_full_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_employee_designation"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/designation"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="10sp"
            android:paddingRight="20sp"
            android:gravity="center"
            android:hint="@string/employee_designation"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_employee_mobile"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="10sp"
            android:paddingRight="20sp"
            android:gravity="center"
            android:hint="@string/employee_mobile_no"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et_work_details"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/work_details"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="10sp"
            android:paddingRight="20sp"
            android:gravity="center"
            android:hint="@string/employee_work_details"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_employee_salary"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/salary"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="10sp"
            android:paddingRight="20sp"
            android:gravity="center"
            android:hint="@string/employee_salary"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:onClick="SaveEmployeeDetails"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>