<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#BBDEFB"
    tools:context=".Activities.MainActivity">

    <ImageView
        android:id="@+id/img_emp_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/employee_main" />

    <EditText
        android:id="@+id/et_company_name"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/company_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10sp"
        android:paddingRight="20sp"
        android:hint="@string/company_name"
        android:gravity="center"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_username"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/user"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/full_name"
        android:gravity="center"
        android:paddingLeft="10sp"
        android:paddingRight="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_designation"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/designation"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10sp"
        android:paddingRight="20sp"
        android:hint="@string/designation"
        android:gravity="center"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_mobile_no"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10sp"
        android:paddingRight="20sp"
        android:hint="@string/mobile_no"
        android:gravity="center"
        android:inputType="phone" />

    <EditText
        android:id="@+id/et_email"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10sp"
        android:paddingRight="20sp"
        android:hint="@string/email"
        android:gravity="center"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save"
            android:background="@drawable/button_round"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:onClick="SaveButton"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>