<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBDEFB">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_attendance"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_employee_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10sp"
        android:paddingRight="20sp"
        android:textSize="22sp"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_employee_id"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10sp"
        android:paddingRight="20sp"
        android:textSize="22sp"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:text="@string/mark_attendance"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_attendance"
        android:background="@drawable/edit_round"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textPersonName"
        android:gravity="center"
        android:hint="@string/absent_present"/>

    <Button
        android:id="@+id/btn_update"
        android:background="@drawable/button_round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="10dp"
        android:text="@string/update"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>
</LinearLayout>